Worked on OKB data model (#1174)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4384 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.OKB.DataAccess/3.3/HeuristicLab.Services.OKB.DataAccess-3.3.csproj
+++ b/sources/HeuristicLab.Services.OKB.DataAccess/3.3/HeuristicLab.Services.OKB.DataAccess-3.3.csproj
@@ -125,6 +125,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>OKB.dbml</DependentUpon>
     </None>
+    <Compile Include="Extensions.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="OKB.generated.cs">
       <DependentUpon>OKB.tt</DependentUpon>
       <AutoGen>True</AutoGen>
