--- a/sources/HeuristicLab.Services.OKB/3.3/app.config
+++ b/sources/HeuristicLab.Services.OKB/3.3/app.config
@@ -66,11 +66,10 @@
     <services>
       <service name="HeuristicLab.Services.OKB.AdminService" behaviorConfiguration="DefaultServiceBehavior">
         <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
-        <endpoint binding="netTcpBinding" bindingConfiguration="DefaultNetTcpBinding" contract="HeuristicLab.Services.OKB.IAdminService" />
+        <endpoint binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding" contract="HeuristicLab.Services.OKB.IAdminService" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8732/Design_Time_Addresses/OKB-3.3/AdminService" />
-            <add baseAddress="net.tcp://localhost:8733/OKB-3.3/AdminService" />
           </baseAddresses>
         </host>
       </service>
