--- a/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
+++ b/sources/HeuristicLab.Problems.DataAnalysis/3.3/HeuristicLab.Problems.DataAnalysis-3.3.csproj
@@ -132,12 +132,8 @@
     <Compile Include="Interfaces\IDataAnalysisProblem.cs" />
     <Compile Include="Interfaces\IOnlineEvaluator.cs" />
     <Compile Include="MatrixExtensions.cs" />
-    <Compile Include="Operators\WeightedParentsQualityVarianceComparator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomEnumerable.cs" />
-    <Compile Include="SupportVectorMachine\ParameterAdjustmentProblem\SupportVectorMachineParameterAdjustmentBestSolutionAnalyzer.cs" />
-    <Compile Include="SupportVectorMachine\ParameterAdjustmentProblem\SupportVectorMachineParameterAdjustmentEvaluator.cs" />
-    <Compile Include="SupportVectorMachine\ParameterAdjustmentProblem\SupportVectorMachineParameterAdjustmentProblem.cs" />
     <Compile Include="SupportVectorMachine\SupportVectorMachineCrossValidationEvaluator.cs" />
     <Compile Include="SupportVectorMachine\SupportVectorMachineModel.cs" />
     <Compile Include="SupportVectorMachine\SupportVectorMachineModelCreator.cs" />
@@ -254,6 +250,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Operators\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
