Worked on OKB (#1174)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4442 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.OKB/3.3/app.config
+++ b/sources/HeuristicLab.Services.OKB/3.3/app.config
@@ -32,7 +32,7 @@
         <binding name="DefaultMexHttpBinding" />
       </mexHttpBinding>
       <wsHttpBinding>
-        <binding name="DefaultWsHttpBinding">
+        <binding name="DefaultWsHttpBinding" maxReceivedMessageSize="2147483647">
           <security mode="Message">
             <message clientCredentialType="UserName" />
           </security>
