Worked on OKB (#1174)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4467 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.OKB.DataTransfer/3.3/HeuristicLab.Services.OKB.DataTransfer-3.3.csproj
+++ b/sources/HeuristicLab.Services.OKB.DataTransfer/3.3/HeuristicLab.Services.OKB.DataTransfer-3.3.csproj
@@ -49,6 +49,9 @@
   <ItemGroup>
     <Compile Include="AlgorithmClass.cs" />
     <Compile Include="Algorithm.cs" />
+    <Compile Include="AlgorithmData.cs" />
+    <Compile Include="DataType.cs" />
+    <Compile Include="User.cs" />
     <Compile Include="NamedOKBItem.cs" />
     <Compile Include="OKBItem.cs" />
     <Compile Include="Platform.cs" />
