--- a/sources/HeuristicLab.Services.OKB/3.3/app.config
+++ b/sources/HeuristicLab.Services.OKB/3.3/app.config
@@ -32,7 +32,8 @@
         <binding name="DefaultMexHttpBinding" />
       </mexHttpBinding>
       <wsHttpBinding>
-        <binding name="DefaultWsHttpBinding" maxReceivedMessageSize="2147483647">
+        <binding name="DefaultWsHttpBinding" maxReceivedMessageSize="200000000">
+          <readerQuotas maxArrayLength="200000000" maxBytesPerRead="200000000" />
           <security mode="Message">
             <message clientCredentialType="UserName" />
           </security>
@@ -70,6 +71,16 @@
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8732/Design_Time_Addresses/OKB-3.3/AdminService" />
+          </baseAddresses>
+        </host>
+      </service>
+
+      <service name="HeuristicLab.Services.OKB.AuthenticationService" behaviorConfiguration="DefaultServiceBehavior">
+        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
+        <endpoint binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding" contract="HeuristicLab.Services.OKB.IAuthenticationService" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8732/Design_Time_Addresses/OKB-3.3/AuthenticationService" />
           </baseAddresses>
         </host>
       </service>
