--- a/sources/HeuristicLab.Tracing/3.3/HeuristicLab.Tracing-3.3.csproj
+++ b/sources/HeuristicLab.Tracing/3.3/HeuristicLab.Tracing-3.3.csproj
@@ -123,6 +123,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\HeuristicLab.ExtLibs\HeuristicLab.log4net\1.2.10.0\HeuristicLab.log4net-1.2.10.0.csproj">
+      <Project>{1B3063DB-D71C-4A6A-A359-883E8F53A140}</Project>
+      <Name>HeuristicLab.log4net-1.2.10.0</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\3.3\HeuristicLab.PluginInfrastructure-3.3.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure-3.3</Name>
