Adapted deployment service (#1165)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4494 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.Deployment/3.3/App.config
+++ b/sources/HeuristicLab.Services.Deployment/3.3/App.config
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-  </configSections>
   <system.diagnostics>
     <!-- for logging. Make sure the IIS application user has write access rights for the output directory -->
     <!--sources>
@@ -40,11 +38,14 @@
       </add>
     </sharedListeners-->
   </system.diagnostics>
+
   <connectionStrings>
-    <remove name="LocalSqlServer" />
-    <add connectionString="Server=SERVICES;Database=HeuristicLab.Deployment;Integrated Security=SSPI" name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_PluginStoreConnectionString" />
-    <add name="HeuristicLab.Authentication" connectionString="Initial Catalog=HeuristicLab.Authentication;data source=localhost;Integrated Security=SSPI;" />
+    <add name="HeuristicLab.Authentication"
+         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=HeuristicLab.Authentication" />
+    <add name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_DeploymentConnectionString"
+         connectionString="Data Source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=HeuristicLab.Deployment" />
   </connectionStrings>
+
   <system.webServer>
     <security>
       <requestFiltering>
@@ -52,23 +53,29 @@
       </requestFiltering>
     </security>
   </system.webServer>
+
   <system.web>
-    <compilation debug="false" />
+    <compilation debug="true" />
     <httpRuntime maxRequestLength="2097151" />
     <membership defaultProvider="AspNetSqlMembershipProvider">
       <providers>
         <clear />
-        <add name="AspNetSqlMemberShipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="HeuristicLab.Authentication" applicationName="HeuristicLab.Authentication" enablePasswordReset="false" enablePasswordRetrieval="false" passwordFormat="Hashed" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"  minRequiredNonalphanumericCharacters="0" minRequiredPasswordLength="8" />
+        <add name="AspNetSqlMemberShipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"
+             connectionStringName="HeuristicLab.Authentication" applicationName="HeuristicLab.Authentication" enablePasswordReset="false"
+             enablePasswordRetrieval="false" passwordFormat="Hashed" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
+             minRequiredNonalphanumericCharacters="0" minRequiredPasswordLength="8" />
       </providers>
     </membership>
     <authentication mode="Windows" />
     <roleManager enabled="true" defaultProvider="AspNetSqlRoleProvider">
       <providers>
         <clear />
-        <add name="AspNetSqlRoleProvider" connectionStringName="HeuristicLab.Authentication" applicationName="HeuristicLab.Authentication" type="System.Web.Security.SqlRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"
+             connectionStringName="HeuristicLab.Authentication" applicationName="HeuristicLab.Authentication" />
       </providers>
     </roleManager>
   </system.web>
+
   <!-- When deploying the service library project, the content of the config file must be added to the host's 
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
@@ -85,70 +92,56 @@
         <binding name="DefaultMexHttpBinding" />
       </mexHttpBinding>
     </bindings>
+
     <diagnostics performanceCounters="Default">
       <!--<messageLogging logMalformedMessages="false" logMessagesAtTransportLevel="false" />-->
     </diagnostics>
+
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="DefaultEndpointBehavior">
+          <dataContractSerializer maxItemsInObjectGraph="1000000" />
+        </behavior>
+      </endpointBehaviors>
+
+      <serviceBehaviors>
+        <behavior name="DefaultServiceBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+          <serviceCredentials>
+            <serviceCertificate findValue="localhost" storeLocation="LocalMachine"
+                                storeName="My" x509FindType="FindBySubjectName" />
+            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
+                                    membershipProviderName="AspNetSqlMembershipProvider" />
+          </serviceCredentials>
+          <serviceAuthorization principalPermissionMode="UseAspNetRoles"
+                                roleProviderName="AspNetSqlRoleProvider" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+
     <services>
-      <service behaviorConfiguration="HeuristicLab.Services.Deployment.UpdateBehavior"
-        name="HeuristicLab.Services.Deployment.Update">
-        <endpoint address="" behaviorConfiguration="SerializationBehavior"
-          binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding"
-          contract="HeuristicLab.Services.Deployment.IUpdate" />
-        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding"
-          contract="IMetadataExchange" />
+      <service name="HeuristicLab.Services.Deployment.UpdateService" behaviorConfiguration="DefaultServiceBehavior">
+        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
+        <endpoint behaviorConfiguration="DefaultEndpointBehavior" binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding"
+                  contract="HeuristicLab.Services.Deployment.IUpdateService" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8732/Design_Time_Addresses/Deployment-3.3/Update" />
+            <add baseAddress="http://localhost:8732/Design_Time_Addresses/Deployment-3.3/UpdateService" />
           </baseAddresses>
         </host>
       </service>
-      <service behaviorConfiguration="HeuristicLab.Services.Deployment.AdminBehavior"
-        name="HeuristicLab.Services.Deployment.Admin">
-        <endpoint address="" behaviorConfiguration="SerializationBehavior"
-          binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding"
-          contract="HeuristicLab.Services.Deployment.IAdmin" />
-        <endpoint address="mex" behaviorConfiguration="SerializationBehavior"
-          binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding"
-          contract="IMetadataExchange" />
+
+      <service name="HeuristicLab.Services.Deployment.AdminService" behaviorConfiguration="DefaultServiceBehavior">
+        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
+        <endpoint behaviorConfiguration="DefaultEndpointBehavior" binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding"
+                  contract="HeuristicLab.Services.Deployment.IAdminService" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8732/Design_Time_Addresses/Deployment-3.3/Admin" />
+            <add baseAddress="http://localhost:8732/Design_Time_Addresses/Deployment-3.3/AdminService" />
           </baseAddresses>
         </host>
       </service>
     </services>
-    <behaviors>
-      <endpointBehaviors>
-        <behavior name="SerializationBehavior">
-          <dataContractSerializer maxItemsInObjectGraph="1000000" />
-        </behavior>
-      </endpointBehaviors>
-      <serviceBehaviors>
-        <behavior name="HeuristicLab.Services.Deployment.UpdateBehavior">
-          <serviceMetadata httpGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
-          <serviceCredentials>
-            <serviceCertificate findValue="localhost" storeLocation="LocalMachine"
-             storeName="My" x509FindType="FindBySubjectName" />
-            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
-             membershipProviderName="AspNetSqlMembershipProvider" />
-          </serviceCredentials>
-          <serviceAuthorization principalPermissionMode="UseAspNetRoles"
-           roleProviderName="AspNetSqlRoleProvider" />
-        </behavior>
-        <behavior name="HeuristicLab.Services.Deployment.AdminBehavior">
-          <serviceMetadata httpGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
-          <serviceCredentials>
-            <serviceCertificate findValue="localhost" storeLocation="LocalMachine"
-             storeName="My" x509FindType="FindBySubjectName" />
-            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
-             membershipProviderName="AspNetSqlMembershipProvider" />
-          </serviceCredentials>
-          <serviceAuthorization principalPermissionMode="UseAspNetRoles"
-           roleProviderName="AspNetSqlRoleProvider" />
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
   </system.serviceModel>
 </configuration>
