--- a/sources/HeuristicLab.Services.Deployment.DataAccess/3.3/HeuristicLab.Services.Deployment.DataAccess-3.3.csproj
+++ b/sources/HeuristicLab.Services.Deployment.DataAccess/3.3/HeuristicLab.Services.Deployment.DataAccess-3.3.csproj
@@ -111,13 +111,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PluginStoreClasses.cs">
-      <DependentUpon>PluginStoreClasses.dbml</DependentUpon>
-    </Compile>
-    <Compile Include="PluginStoreClasses.designer.cs">
+    <Compile Include="Deployment.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>PluginStoreClasses.dbml</DependentUpon>
+      <DependentUpon>Deployment.dbml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -127,21 +124,16 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="PluginStoreClasses.dbml">
-      <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>PluginStoreClasses.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="HeuristicLab.snk" />
-    <None Include="PluginStoreClasses.dbml.layout">
-      <DependentUpon>PluginStoreClasses.dbml</DependentUpon>
+    <None Include="Deployment.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>Deployment.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </None>
+    <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -164,6 +156,14 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="SQL Scripts\Initialize Deployment Database.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Deployment.dbml.layout">
+      <DependentUpon>Deployment.dbml</DependentUpon>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
