--- a/sources/HeuristicLab.Services.Deployment.DataAccess/3.3/app.config
+++ b/sources/HeuristicLab.Services.Deployment.DataAccess/3.3/app.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-    </configSections>
-    <connectionStrings>
-        <add name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_PluginStoreConnectionString"
-            connectionString="Server=SERVICES;Database=HeuristicLab.Deployment;Integrated Security=SSPI"
-            providerName="" />
-    </connectionStrings>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_DeploymentConnectionString"
+      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=HeuristicLab.Deployment;Integrated Security=SSPI"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
