--- a/sources/HeuristicLab.PluginInfrastructure/3.3/Properties/Settings.settings
+++ b/sources/HeuristicLab.PluginInfrastructure/3.3/Properties/Settings.settings
@@ -2,20 +2,20 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HeuristicLab.PluginInfrastructure.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="UpdateLocation" Type="System.String" Scope="User">
-      <Value Profile="(Default)">http://services.heuristiclab.com/Deployment-3.3/Update.svc</Value>
-    </Setting>
     <Setting Name="UpdateLocationUserName" Type="System.String" Scope="User">
       <Value Profile="(Default)">anonymous</Value>
     </Setting>
     <Setting Name="UpdateLocationPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)">GetTheLab!</Value>
     </Setting>
-    <Setting Name="UpdateLocationAdministrationAddress" Type="System.String" Scope="User">
-      <Value Profile="(Default)">http://services.heuristiclab.com/Deployment-3.3/Admin.svc</Value>
-    </Setting>
     <Setting Name="ShowPluginUploadControls" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="UpdateLocation" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://services.heuristiclab.com/Deployment-3.3/UpdateService.svc</Value>
+    </Setting>
+    <Setting Name="UpdateLocationAdministrationAddress" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://services.heuristiclab.com/Deployment-3.3/AdminService.svc</Value>
     </Setting>
   </Settings>
 </SettingsFile>
