Updated license files (#1209)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4498 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab/3.3/HeuristicLab-3.3.csproj
+++ b/sources/HeuristicLab/3.3/HeuristicLab-3.3.csproj
@@ -156,6 +156,9 @@
     </Content>
     <Content Include="Files.x86.txt">
     </Content>
+    <None Include="HeuristicLab 3.3 License.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Content Include="HeuristicLab.ico" />
   </ItemGroup>
   <ItemGroup>
