Added first version of allele frequency analysis (#1234)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4623 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Analysis.Views/3.3/HeuristicLab.Analysis.Views-3.3.csproj
+++ b/sources/HeuristicLab.Analysis.Views/3.3/HeuristicLab.Analysis.Views-3.3.csproj
@@ -111,7 +111,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLabAnalysisViewsPlugin.cs.frame" />
+    <Compile Include="AlleleFrequencyArrayView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AlleleFrequencyArrayView.Designer.cs">
+      <DependentUpon>AlleleFrequencyArrayView.cs</DependentUpon>
+    </Compile>
     <Compile Include="HeuristicLabAnalysisViewsPlugin.cs" />
+    <Compile Include="AlleleFrequencyView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AlleleFrequencyView.Designer.cs">
+      <DependentUpon>AlleleFrequencyView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataTableView.cs">
       <SubType>UserControl</SubType>
