--- a/sources/HeuristicLab.Analysis/3.3/HeuristicLab.Analysis-3.3.csproj
+++ b/sources/HeuristicLab.Analysis/3.3/HeuristicLab.Analysis-3.3.csproj
@@ -113,6 +113,9 @@
     <Compile Include="BestAverageWorstQualityCalculator.cs" />
     <Compile Include="BestScopeSolutionAnalyzer.cs" />
     <Compile Include="BestQualityMemorizer.cs" />
+    <Compile Include="Allele.cs" />
+    <Compile Include="AlleleFrequency.cs" />
+    <Compile Include="AlleleFrequencyArray.cs" />
     <Compile Include="QualityAnalyzer.cs" />
     <Compile Include="MinAverageMaxValueAnalyzer.cs" />
     <Compile Include="MinAverageMaxValueCalculator.cs" />
@@ -123,6 +126,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataTable.cs" />
     <Compile Include="DataTableValuesCollector.cs" />
+    <Compile Include="AlleleFrequencyAnalyzer.cs" />
     <Compile Include="ValueAnalyzer.cs" />
   </ItemGroup>
   <ItemGroup>
